# team-reminders

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: api.py  database.py  logging_config.py  main.py  settings.py  worker.py
