[project]
dependencies = [
  "alembic>=1.15.2",
  "arq>=0.26.3",
  "fastapi>=0.115.12",
  "polars>=1.26.0",
  "pydantic-settings>=2.8.1",
  "sqlalchemy>=2.0.40",
  "streamlit>=1.44.1",
  "twilio>=9.5.1",
]
description = "Add your description here"
name = "team-reminders"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

# Specify the source directory
src = ["src"]

[tool.ruff.format]
# Enable formatting
